--- a/index.html
+++ b/index.html
@@ -12,31 +12,53 @@
       let canvas = document.getElementById("canvas");
       canvas.width = document.documentElement.clientWidth;
       canvas.height = document.documentElement.clientHeight;
-      let ctx = canvas.getContext("2d");
 
+      let ctx = canvas.getContext("2d");
       let painting = false;
 
       ctx.fillStyle = "black";
       ctx.strokeStyle = "none";
+      ctx.lineWidth = 6;
+      ctx.lineCap = "round";
 
-      canvas.onmousedown = () => {
-        painting = true;
-      };
+      var isTouchDevice = "ontouchstart" in document.documentElement;
+      let last;
+      if (isTouchDevice) {
+        canvas.ontouchstart = e => {
+          let x = e.touches[0].clientX;
+          let y = e.touches[0].clientY;
+          last = [x, y];
+        };
+        canvas.ontouchmove = e => {
+          let x = e.touches[0].clientX;
+          let y = e.touches[0].clientY;
+          drawLine(last[0], last[1], x, y);
+          last = [x, y];
+        };
+      } else {
+        canvas.onmousedown = e => {
+          painting = true;
+          last = [e.clientX, e.clientY];
+        };
 
-      canvas.onmousemove = e => {
-        if (painting === true) {
-          ctx.beginPath();
-          ctx.arc(e.clientX, e.clientY, 5, 0, 2 * Math.PI);
-          ctx.stroke();
-          ctx.fill();
-        } else {
-          console.log("Chilling");
-        }
-      };
-
-      canvas.onmouseup = () => {
-        painting = false;
-      };
+        canvas.onmousemove = e => {
+          if (painting === true) {
+            drawLine(last[0], last[1], e.clientX, e.clientY);
+            last = [e.clientX, e.clientY];
+          } else {
+            console.log("Chilling");
+          }
+        };
+        canvas.onmouseup = () => {
+          painting = false;
+        };
+      }
+      function drawLine(x1, y1, x2, y2) {
+        ctx.beginPath();
+        ctx.moveTo(x1, y1);
+        ctx.lineTo(x2, y2);
+        ctx.stroke();
+      }
     </script>
   </body>
 </html>
